# ParallelCGP

./: .gitignore  BoolProblem.cpp  BoolProblem.h  CGP.cpp  CGP.h  CGPIndividual.cpp  CGPIndividual.h  CGPNode.h  CGPOutput.h  CMakeLists.txt  FuncProblem.h  Problem.cpp  Problem.h  Problem.hpp  README.md  Tester.hpp  Timer.h  Timer.hpp  build_all_branches.bat  build_all_branches.sh  main.cpp
adProblem/: ADProblem.cpp  ADProblem.h  ADProblem.hpp  ADTester.hpp
boolProblem/: BoolProblem.cpp  BoolProblem.h  BoolProblem.hpp  BoolTester.hpp
cgp/: CGP.cpp  CGP.h  CGP.hpp  CGPIndividual.cpp  CGPIndividual.h  CGPIndividual.hpp  CGPNode.h  CGPNode.hpp  CGPOutput.h  CGPOutput.hpp
funcProblem/: FuncProblem.cpp  FuncProblem.h  FuncProblem.hpp  FuncTester.hpp
testingResults/processedData/: processingSkripta.py  sortingSkripta.py
towerProblem/: TowerProblem.cpp  TowerProblem.h
waitProblem/: WaitProblem.cpp  WaitProblem.h  WaitProblem.hpp  WaitTester.hpp
